# vaultron

./: .gitmodules  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml
.github/workflows/: build.yml  release.yml
container/enclave/: Dockerfile
enclave/: Cargo.toml  Makefile  build.rs
enclave/container/: Dockerfile
enclave/scripts/: build_kmstool_enclave_lib.sh  build_kmstool_enclave_lib_test.sh  build_vaultron_enclave.sh  install.sh
enclave/src/: error.rs  lib.rs  main.rs  server.rs  trace.rs
enclave/src/cluster/: mod.rs
enclave/src/cluster/key/: cluster_key.rs
enclave/src/cluster/user/: wallet.rs
enclave/src/common/: config.rs  error.rs  git_rev.rs  mod.rs  settings.rs  trace.rs  types.rs
enclave/src/data/: enclave_attestation.rs  enclave_data.rs  kms_key_data.rs  kms_wallet_data.rs  mod.rs
enclave/src/kms/: handler.rs
enclave/src/kms_key/: key.rs
enclave/src/message/: config.rs  handler.rs  mod.rs  ping.rs  wallet.rs
enclave/src/message/cluster/: handler.rs  inner.rs  mod.rs  wallet.rs
enclave/src/message/cluster/key/: cluster_key.rs  mod.rs
enclave/src/message/cluster/user/: account.rs  wallet.rs
enclave/src/message/internal/: attribute.rs  handler.rs  key.rs  mod.rs  ping.rs
enclave/src/nsm/: handle.rs  mod.rs  types.rs
enclave/src/server/: app.rs  context.rs  mod.rs
enclave/tests/: enclave_mock.rs  mod.rs
enclave/tests/cluster/: mod.rs
enclave/tests/cluster/key/: cluster_key_tests.rs  mod.rs
enclave/tests/cluster/user/: wallet_tests.rs
enclave/tests/data/: enclave_attestation_tests.rs  mod.rs
enclave/tests/kms_key/: key_tests.rs
enclave/tests/message/: handler_config_tests.rs  handler_ping_tests.rs  handler_wallet_tests.rs  mod.rs
enclave/tests/server/: app_tests.rs
enclave/tests/test_files/enclave/: attestation.sign1
enclave/tests/test_files/kms_key/: key_policy.json  policy.json
enclave_agent/: Cargo.toml  Makefile  build.rs
enclave_agent/src/: agent.rs  args.rs  client.rs  error.rs  lib.rs  main.rs  types.rs
enclave_agent/src/agent/: handler.rs  init_cluster.rs  mod.rs  service.rs
enclave_agent/src/client/: app.rs
enclave_agent/src/common/: constants.rs  error.rs  mod.rs  service.rs  settings.rs  trace.rs  types.rs
enclave_agent/src/enclave/: controller.rs  describe.rs  mod.rs
enclave_agent/src/message/: mod.rs
enclave_agent/src/message/agent/: handler.rs
enclave_agent/src/message/enclave/: handler.rs
enclave_agent/tests/: app_tests.rs
enclave_attestation/: Cargo.toml
enclave_attestation/src/: attestation.rs  error.rs  lib.rs
enclave_attestation/tests/: attestation_tests.rs
enclave_crypto/: Cargo.toml
enclave_crypto/src/: error.rs  lib.rs
enclave_crypto/src/chain_key/: derive.rs  eth.rs  mod.rs  solana.rs  sui.rs
enclave_crypto/src/common/: random.rs
enclave_crypto/src/encrypt/: aes.rs
enclave_crypto/src/encrypto/: aes.rs  ecies.rs  mod.rs
enclave_crypto/tests/: mod.rs
enclave_crypto/tests/chain_key/: derive_test.rs  eth_tests.rs  mod.rs  solana_tests.rs  sui_tests.rs
enclave_crypto/tests/encrypt/: aes_tests.rs  ecies_tests.rs  mod.rs
enclave_grpc/: Cargo.toml
enclave_grpc/src/: client.rs  server.rs
enclave_grpc/tests/: client_tests.rs  common.rs  server_tests.rs
enclave_kmstool/: Cargo.toml  build.rs
enclave_kmstool/src/: client.rs  error.rs  kmstool.rs  lib.rs
enclave_kmstool/src/c_lib/: kmstool_clib_client.rs  kmstool_enclave_lib.h  kmstool_enclave_lib.rs  mod.rs
enclave_protos/: Cargo.toml  buf.gen.yaml
enclave_protos/schema/proto/vaultron/v1/: agent.proto  request.proto  response.proto
enclave_protos/scripts/: build-protos.sh
enclave_protos/src/: lib.rs
enclave_protos/src/enclave/: mod.rs
enclave_protos/src/enclave/v1/: config.rs  mod.rs  ping.rs  wallet.rs
enclave_protos/src/vaultron/: mod.rs
enclave_protos/src/vaultron/agent/v1/: mod.rs  response.rs
enclave_protos/src/vaultron/attestation/v1/: document.rs
enclave_protos/src/vaultron/enclave/: mod.rs
enclave_protos/src/vaultron/v1/: response.rs
enclave_protos_macros/: Cargo.toml
enclave_socket/: Cargo.toml
enclave_socket/src/: lib.rs
enclave_tester/: Cargo.toml  Makefile
enclave_tester/src/: error.rs  lib.rs  main.rs  tester.rs
enclave_utils/: Cargo.toml
enclave_utils/src/: address.rs  lib.rs
enclave_utils/tests/: address_tests.rs  hex_tests.rs  time_tests.rs
enclave_vsock/: Cargo.toml  README.md
enclave_vsock/src/: error.rs  lib.rs
enclave_vsock/src/vsocket/: client.rs  message.rs  mod.rs  server.rs
enclave_vsock/src/vsocket/protocol/: handler.rs  header.rs  mod.rs
enclave_vsock/tests/protocol/: handler_read_tests.rs  handler_write_tests.rs  header_tests.rs  mod.rs  protocol_mock.rs  utils.rs
enclave_wallet/: Cargo.toml
enclave_wallet/src/: derive.rs  error.rs  eth.rs  lib.rs  path.rs  solana.rs  sui.rs  wallet.rs
enclave_wallet/tests/: wallet_tests.rs
integration_tester/: Cargo.toml
integration_tester/src/: error.rs  handler.rs  lib.rs  main.rs  message.rs  tester.rs  trace.rs
integration_tester/src/tester/: enclave.rs  enclave_agent.rs  mod.rs  service_discovery.rs
integration_tests/: Cargo.toml
integration_tests/scripts/: test_kms_client_disconnect.sh
integration_tests/src/: main.rs  tester.rs
kmstool_enclave_lib/: Cargo.toml  build.rs
kmstool_enclave_lib/lib/: kmstool_enclave_lib.h
kmstool_enclave_lib/src/: kmstool_enclave_lib.rs  lib.rs
scripts/: build_elf_install.sh  build_kmstool_enclave_lib.sh  download_aws_enclave_root_cert.sh  install.sh  run_install.sh  start_template.sh
service_discovery/: Cargo.toml
service_discovery/src/: error.rs  lib.rs  querier.rs  register.rs  types.rs
service_discovery/src/discovery/: handler.rs  mod.rs  querier.rs  register.rs
vaultron_enclave/: Cargo.toml  Makefile
vaultron_enclave/container/: DockerfileLibTest
vaultron_enclave/scripts/: build_kmstool_enclave_lib.sh  build_kmstool_enclave_lib_test.sh
vaultron_enclave/src/: error.rs  server.rs  trace.rs
vaultron_enclave/src/kms/: handler.rs
vaultron_enclave_proxy/: Cargo.toml
vaultron_enclave_proxy/src/: error.rs  main.rs
(+43 files in other folders)
