[package]
name = "vaultron_enclave"
version = "0.1.4"
authors = ["mikerfrr"]
edition = "2018"
build = "build.rs"

[dependencies]
aes-gcm = {version = "0.10.3"}
anyhow = {version = "1.0.97"}
async-trait = {version = "0.1.64"}
aws-nitro-enclaves-nsm-api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git", rev = "8ec7eac", features = ["nix"] }
aws-nitro-enclaves-cose = { git = "https://github.com/awslabs/aws-nitro-enclaves-cose.git", rev = "6064f82"}
ciborium = {version = "0.2.2"}
ecies = {version = "0.2.8"}
enclave_attestation = {path = "../enclave_attestation"}
enclave_protos = {path = "../enclave_protos", features = ["vaultron-common-v1", "vaultron-enclave-v1"]}
enclave_utils = {path = "../enclave_utils"}
enclave_vsock = {path = "../enclave_vsock"}
enclave_crypto = {path = "../enclave_crypto"}
env_logger = {version = "0.11.7"}
ethers-signers = {version = "2.0.14"}
ethers-core = {version = "2.0.14"}
hex = {version = "0.4.3"}
log = {version = "0.4.26"}
openssl = { version = "0.10.72", features = ["vendored"] }
postcard = {version = "1.1.1", features = ["alloc"]}
prost = {version = "0.11.9"}
serde = {version = "1.0.219"}
serde_json = {version = "1.0.140"}
serde_cbor = {version = "0.11"}
thiserror = {version = "2.0.12"}
tokio = {version = "1.44.0", features = ["full"]}
typed-builder = {version = "0.20.0"}

[[bin]]
name="vaultron_enclave"
path = "src/main.rs"

[dev-dependencies]
bs64 = {version = "0.1.2"}
ethers-signers = {version = "2.0.14"}
ethers-core = {version = "2.0.14"}
fastcrypto = { version = "0.1.9" }
solana-keypair = { version = "2.2.1", default-features = false }
solana-signer = { version = "2.2.1", default-features = false }
sui-types = { git = "https://github.com/MystenLabs/sui.git", rev = "615516e" }
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
mockall = { version = "0.11.4" }
