[package]
name = "enclave_attestation"
version = "0.1.0"
authors = ["mikerfrr"]
edition = "2021"

[dependencies]
anyhow = {version = "1.0.97"}
aws-nitro-enclaves-nsm-api = { git = "https://github.com/aws/aws-nitro-enclaves-nsm-api.git", rev = "8ec7eac", features = ["nix"] }
aws-nitro-enclaves-cose = { git = "https://github.com/awslabs/aws-nitro-enclaves-cose.git", rev = "6064f82"}
enclave_protos = {path = "../enclave_protos", default-features = false, features = ["vaultron-enclave-attestation-v1"]}
hex = {version = "0.4"}
log = {version = "0.4.26"}
openssl = { version = "0.10.72", features = ["vendored"] }
serde_cbor = {version = "0.11.2"}
thiserror = {version = "2.0.12"}
tokio = {version = "1.44.0", features = ["full"]}

[dev-dependencies]
