[package]
name = "enclave_grpc"
version = "0.1.4"
edition = "2021"

[features]
default = []
fs = ["tokio/fs"]
server = ["enclave_protos/grpc-server", "bytes", "http-body", "tower-http", "tower-layer", "tonic-web"]

[dependencies]
anyhow = { version = "1.0.97" }
bytes = { version = "1.10.1", optional = true }
http = { version = "0.2.9" }
http-body = { version = "0.4.5", optional = true }
enclave_protos = { path = "../enclave_protos", default-features = false, features = ["vaultron-service-v1"] }
tokio = { version = "1.44.0", features = ["sync"] }
tonic = { version = "0.9.2", features = ["tls", "tls-roots"] }
tonic-web = { version = "0.9.2", optional = true }
tower-http = { version = "0.4.4", optional = true }
tower-layer = { version = "0.3.2", optional = true }
typed-builder = { version = "0.20.0" }

[dev-dependencies]
hyper = { version = "0.14.27" }
mockall = { version = "0.11.4" }
enclave_protos = { path = "../enclave_protos", default-features = false, features = ["vaultron-test-v1", "grpc-server", "grpc-client"] }
prost = { version = "0.11.9" }
rcgen = { version = "0.11.1" }
tempfile = { version = "3.7.1" }
tokio = { version = "1.44.0", features = ["macros", "rt", "test-util"] }