[package]
name = "enclave_kmstool"
version = "0.1.0"
edition = "2021"

[features]
default = []
kmstool_aws_clib_feature = []

[dependencies]
anyhow = {version = "1.0.97"}
enclave_protos = {path = "../enclave_protos"}
enclave_utils = {path = "../enclave_utils"}
enclave_vsock = {path = "../enclave_vsock"}
libc = {version = "0.2.171"}
log = {version = "0.4.26"}
thiserror = {version = "2.0.12"}
tokio = {version = "1.44.0", features = ["rt-multi-thread", "io-util", "net", "sync", "time"]}
typed-builder = {version = "0.20.0"}

[build-dependencies]
bindgen = {version = "0.71.1", default-features = false, features = ["runtime"]}

[package.metadata.bindgen]
generate_comments = false
generate_block = true
clean = true
size_t_is_usize = true
rustfmt_bindings = true
sort_semantically = true
