[package]
name = "enclave_utils"
version = "0.1.4"
authors = ["mikerfrr"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97" }
ethers-core = { version = "2.0.14" }
rustc-hex = { version = "2.1.0" }

[dev-dependencies]
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
