[package]
name = "enclave_vsock"
version = "0.1.0"
authors = ["mikerfrr"]
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97" }
async-trait = { version = "0.1.64" }
log = { version = "0.4.26" }
thiserror = { version = "2.0.12" }
tokio = { version = "1.44.0", features = ["rt-multi-thread", "io-util", "net", "sync", "time"] }
typed-builder = { version = "0.20.0" }
vsock = { version = "0.5.1" }

[dev-dependencies]
mockall = { version = "0.11.4" }
tokio = { version = "1.26.0", features = ["macros", "rt", "test-util"] }
rand = "0.8.5"
