[package]
name = "service_discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.97" }
async-trait = {version = "0.1.64"}
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-servicediscovery = { version = "1.65.0" }
aws-smithy-runtime-api = { version = "1.7.4" }
aws-types = { version = "1.3.6" }
hex = {version = "0.4.3"}
log = {version = "0.4.26"}
thiserror = { version = "2.0.12" }
tokio = { version = "1.44.0", features = ["full"] }
typed-builder = { version = "0.20.0" }

[dev-dependencies]
mockall = { version = "0.11.4" }
tokio = { version = "1.44.0", features = ["macros", "rt", "test-util"] }