[package]
name = "vaultron_enclave"
version = "0.1.0"
authors = ["mike"]
edition = "2018"

[dependencies]
anyhow = { version = "1.0" }
log = "0.4.25"
env_logger = { version = "0.11.6" }
byteorder = "1.3"
vsock = "0.5.1"
thiserror = "2.0.11"
serde_json = "1.0.139"
typed-builder = "0.20.0"
libc = "0.2.170"

kmstool_enclave_lib = { path = "../kmstool_enclave_lib" }